--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node": "11.11.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.2",
     "eslint": "^6.0.1",
     "eslint-config-standard": "^13.0.1",
     "eslint-plugin-import": "^2.18.0",
