--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "tiny-uuid": "^1.0.0"
   },
   "engines": {
     "node": "11.11.0"
