--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "classnames": "^2.2.6",
     "express": "^4.16.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
