--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start-game-server": "node server.js",
-    "start": "react-scripts start",
+    "start": "REACT_APP_GAME_SERVER_PORT=8080 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
