--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "start-game-server": "node server.js",
     "start": "REACT_APP_GAME_SERVER_PORT=8080 react-scripts start",
     "build": "react-scripts build",
+    "build-ig": "REACT_APP_GAME_SERVER_URI=https://infinite-hamlet-91503.herokuapp.com/ react-scripts build && zip -r build.zip build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "author": "",
   "license": "ISC",
+  "homepage": ".",
   "dependencies": {
     "classnames": "^2.2.6",
     "express": "^4.16.4",
