--- a/matchmaker/package.json
+++ b/matchmaker/package.json
@@ -4,24 +4,14 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start-game-server": "node server.js",
-    "start": "REACT_APP_GAME_SERVER_PORT=8080 react-scripts start",
-    "build": "react-scripts build",
-    "build-ig": "REACT_APP_GAME_SERVER_URI=https://infinite-hamlet-91503.herokuapp.com/ react-scripts build && zip -r build.zip build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start-local": "GAME_INSTANCE_MANAGER_SERVICE_HOST=localhost GAME_INSTANCE_MANAGER_SERVICE_PORT=8082 node server.js"
   },
   "author": "",
   "license": "ISC",
   "homepage": ".",
   "dependencies": {
-    "classnames": "^2.2.6",
     "express": "^4.16.4",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "socket.io": "^2.2.0",
-    "tiny-uuid": "^1.0.0"
+    "superagent": "^5.1.2"
   },
   "engines": {
     "node": "11.11.0"
