--- a/game_server/package.json
+++ b/game_server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "build": "babel src/ -d build/",
-    "develop": "NODE_ENV=development babel-node src/server.js",
+    "start-local": "NODE_ENV=development babel-node src/server.js",
     "start": "NODE_ENV=production node build/server.js"
   },
   "author": "",
