--- a/game_instance_manager/package.json
+++ b/game_instance_manager/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "build": "babel src/ -d build/",
-    "start-local": "NODE_ENV=development babel-node src/server.js",
+    "start-local": "NODE_ENV=development babel-watch src/server.js",
     "start": "NODE_ENV=production node build/server.js"
   },
   "author": "",
@@ -18,6 +18,7 @@
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "socket.io": "^2.2.0",
+    "superagent": "^5.1.2",
     "tiny-uuid": "^1.0.0"
   },
   "engines": {
@@ -27,6 +28,7 @@
     "@babel/cli": "^7.7.5",
     "@babel/node": "^7.7.4",
     "@babel/preset-flow": "^7.7.4",
+    "babel-watch": "^7.0.0",
     "flow-bin": "^0.103.0",
     "prettier": "^1.18.2"
   },
