--- a/game_server/package.json
+++ b/game_server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "build": "babel src/ -d build/",
-    "start-local": "NODE_ENV=development babel-node src/server.js",
+    "start-local": "NODE_ENV=development babel-watch src/server.js",
     "start": "NODE_ENV=production node build/server.js"
   },
   "author": "",
@@ -27,6 +27,7 @@
     "@babel/cli": "^7.7.5",
     "@babel/node": "^7.7.4",
     "@babel/preset-flow": "^7.7.4",
+    "babel-watch": "^7.0.0",
     "flow-bin": "^0.103.0",
     "prettier": "^1.18.2"
   },
