--- a/matchmaker/package.json
+++ b/matchmaker/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "babel src/ -d build/",
     "start": "NODE_ENV=production node build/server.js",
-    "start-local": "NODE_ENV=development GAME_INSTANCE_MANAGER_SERVICE_HOST=localhost GAME_INSTANCE_MANAGER_SERVICE_PORT=8082 babel-node src/server.js"
+    "start-local": "NODE_ENV=development GAME_INSTANCE_MANAGER_SERVICE_HOST=localhost GAME_INSTANCE_MANAGER_SERVICE_PORT=8082 babel-watch src/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +22,7 @@
     "@babel/cli": "^7.7.5",
     "@babel/node": "^7.7.4",
     "@babel/preset-flow": "^7.7.4",
+    "babel-watch": "^7.0.0",
     "flow-bin": "^0.103.0",
     "prettier": "^1.18.2"
   },
