--- a/game_instance_manager/package.json
+++ b/game_instance_manager/package.json
@@ -5,15 +5,17 @@
   "main": "server.js",
   "scripts": {
     "build": "babel src/ -d build/",
-    "start-local": "NODE_ENV=development babel-watch src/server.js",
-    "start": "NODE_ENV=production node build/server.js"
+    "start-local": "NODE_ENV=development babel-watch src/server.js | ./node_modules/.bin/bunyan",
+    "start": "NODE_ENV=production node build/server.js | ./node_modules/.bin/bunyan"
   },
   "author": "",
   "license": "ISC",
   "homepage": ".",
   "dependencies": {
+    "bunyan": "^1.8.12",
     "classnames": "^2.2.6",
     "express": "^4.16.4",
+    "express-bunyan-logger": "^1.3.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
