--- a/game/package.json
+++ b/game/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start-game-server": "node server.js",
-    "start": "REACT_APP_GAME_SERVER_PORT=8080 react-scripts start",
+    "start": "REACT_APP_MATCHMAKER_SERVICE_HOST=http://localhost REACT_APP_MATCHMAKER_SERVICE_PORT=8081 react-scripts start",
     "build": "react-scripts build",
     "build-ig": "REACT_APP_GAME_SERVER_URI=https://infinite-hamlet-91503.herokuapp.com/ react-scripts build && zip -r build.zip build",
     "test": "react-scripts test",
