--- a/matchmaker/package.json
+++ b/matchmaker/package.json
@@ -15,7 +15,8 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "socket.io": "^2.3.0",
-    "superagent": "^5.1.2"
+    "superagent": "^5.1.2",
+    "tiny-uuid": "^1.0.0"
   },
   "engines": {
     "node": "11.11.0"
