--- a/game_server/package.json
+++ b/game_server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "build": "babel src/ -d build/",
-    "start-local": "NODE_ENV=development babel-watch src/server.js",
+    "start-local": "NODE_ENV=development GAME_SERVER_SERVICE_HOST=http://localhost GAME_SERVER_SERVICE_PORT=8083 babel-watch src/server.js",
     "start": "NODE_ENV=production node build/server.js"
   },
   "author": "",
