--- a/matchmaker/package.json
+++ b/matchmaker/package.json
@@ -23,7 +23,9 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.7.5",
+    "@babel/core": "^7.7.5",
     "@babel/node": "^7.7.4",
+    "@babel/preset-env": "^7.7.6",
     "@babel/preset-flow": "^7.7.4",
     "babel-watch": "^7.0.0",
     "flow-bin": "^0.103.0",
