--- a/game/pod.yaml
+++ b/game/pod.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: game-assets
+  role: game-assets-server
 spec:
   hostNetwork: true
   restartPolicy: Never
