--- a/matchmaker/pod.yaml
+++ b/matchmaker/pod.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: matchmaker
+  role: matchmaker-server
 spec:
   hostNetwork: true
   restartPolicy: Never
