--- a/game_instance_manager/pod.yaml
+++ b/game_instance_manager/pod.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: game-instance-manager-server
+  role: game-instance-manager-pod
 spec:
   hostNetwork: true
   restartPolicy: Never
