--- a/game/service.yaml
+++ b/game/service.yaml
@@ -8,5 +8,5 @@ spec:
   - port: 80
     targetPort: 8080
   selector:
-    role: game-assets-pod
+    pod-type: game-assets-pod
   type: LoadBalancer
