--- a/matchmaker/pod.yaml
+++ b/matchmaker/pod.yaml
@@ -2,7 +2,8 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: matchmaker
-  role: matchmaker-pod
+  labels:
+    pod-type: matchmaker-pod
 spec:
   hostNetwork: true
   restartPolicy: Never
