--- a/game_instance_manager/pod.yaml
+++ b/game_instance_manager/pod.yaml
@@ -16,3 +16,7 @@ spec:
       env:
         - name: SESSION_NAME
           value: "game-instance-manager-server"
+        - name: GAME_SERVER_SERVICE_HOST
+          value: "34.83.251.24"
+        - name: GAME_SERVER_SERVICE_PORT
+          value: "7008"
