--- a/game_instance_manager/pod.yaml
+++ b/game_instance_manager/pod.yaml
@@ -20,3 +20,5 @@ spec:
           value: "34.83.251.24"
         - name: GAME_SERVER_SERVICE_PORT
           value: "7008"
+        - name: GAME_INSTANCE_MANAGER_SERVICE
+          value: "34.83.251.24:7008"
