--- a/matchmaker/pod.yaml
+++ b/matchmaker/pod.yaml
@@ -16,3 +16,9 @@ spec:
       env:
         - name: SESSION_NAME
           value: "matchmaker"
+        - name: GAME_INSTANCE_MANAGER_SERVICE_HOST
+          value: 10.138.0.8
+        - name: GAME_INSTANCE_MANAGER_SERVICE_PORT
+          value: 8082
+        - name: GAME_INSTANCE_MANAGER_SERVICE
+          value: 10.138.0.8:8082
