--- a/game/pod.yaml
+++ b/game/pod.yaml
@@ -16,3 +16,5 @@ spec:
       env:
         - name: SESSION_NAME
           value: "game-assets-server"
+        - name: REACT_APP_MATCHMAKER_SERVICE
+          value: "35.233.208.54:8081"
