--- a/game_instance_manager/pod.yaml
+++ b/game_instance_manager/pod.yaml
@@ -17,8 +17,8 @@ spec:
         - name: SESSION_NAME
           value: "game-instance-manager-server"
         - name: GAME_SERVER_SERVICE_HOST
-          value: "34.83.251.24"
+          value: "34.83.251.24:80"
         - name: GAME_SERVER_SERVICE_PORT
           value: "7008"
-        - name: GAME_INSTANCE_MANAGER_SERVICE
-          value: "34.83.251.24:7008"
+        - name: GAME_SERVER_SERVICE
+          value: "34.83.251.24:80"
