--- a/matchmaker/pod.yaml
+++ b/matchmaker/pod.yaml
@@ -8,7 +8,7 @@ spec:
   hostNetwork: true
   restartPolicy: Never
   nodeSelector:
-    role: matchmaker
+    role: apps
   containers:
     - name: matchmaker
       image: gcr.io/tsbr-cluster-demo/matchmaker:v0
