--- a/game_instance_manager/pod.yaml
+++ b/game_instance_manager/pod.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: game-instance-manager-server
+  name: game-instance-manager
   labels:
     pod-type: game-instance-manager-pod
 spec:
@@ -10,15 +10,9 @@ spec:
   nodeSelector:
     role: apps
   containers:
-    - name: game-instance-manager-server
+    - name: game-instance-manager
       image: gcr.io/tsbr-cluster-demo/game-instance-manager:v0
-      imagePullPolicy: Always
+      imagePullPolicy: Never
       env:
-        - name: SESSION_NAME
-          value: "game-instance-manager-server"
-        - name: GAME_SERVER_SERVICE_HOST
-          value: "34.83.251.24"
-        - name: GAME_SERVER_SERVICE_PORT
-          value: "7008"
-        - name: GAME_SERVER_SERVICE
-          value: "34.83.251.24:7008"
+      - name: GAME_SERVER_SERVICE
+        value: "192.168.64.2:8083"
