--- a/api/pod_local.yaml
+++ b/api/pod_local.yaml
@@ -11,7 +11,7 @@ spec:
     role: apps
   containers:
     - name: api
-      image: api
+      image: gcr.io/tsbr-cluster-demo/api:v0
       imagePullPolicy: Always
       env:
         - name: SESSION_NAME
