--- a/game_instance_manager/service.yaml
+++ b/game_instance_manager/service.yaml
@@ -1,11 +1,11 @@
----
 apiVersion: v1
 kind: Service
 metadata:
-  name: game-instance-manager
+  name: game-instance-manager-service
 spec:
   ports:
   - port: 80
-    targetPort: 8080
+    targetPort: 8082
   selector:
     pod-type: game-instance-manager-pod
+  clusterIP: 10.0.0.2
