--- a/matchmaker/service.yaml
+++ b/matchmaker/service.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: v1
 kind: Service
 metadata:
@@ -9,4 +8,4 @@ spec:
     targetPort: 8081
   selector:
     pod-type: matchmaker-pod
-  type: LoadBalancer
+  clusterIP: 10.51.240.3
