--- a/game/package.json
+++ b/game/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "socket.io": "^2.2.0",
+    "superagent": "^5.1.2",
     "tiny-uuid": "^1.0.0"
   },
   "engines": {
