--- a/game_instance_manager/pod.yaml
+++ b/game_instance_manager/pod.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: game-instance-manager-pod
+  name: instance-manager
   labels:
     pod-type: game-instance-manager-pod
 spec:
