--- a/autoscaler/pod.yaml
+++ b/autoscaler/pod.yaml
@@ -16,10 +16,10 @@ spec:
         - name: SESSION_NAME
           value: "autoscale-server"
         - name: SERVERS_PER_NODE
-          value: 2
+          value: "2"
         - name: BUFFER_SIZE
-          value: 2
+          value: "2"
         - name: REFRESH_SECONDS
-          value: 10
+          value: "10"
         - name: MIN_SERVERS
-          value: 1
+          value: "1"
