--- a/game_server/package.json
+++ b/game_server/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "socket.io": "^2.2.0",
-    "tiny-uuid": "^1.0.0"
+    "tiny-uuid": "^1.0.0",
+    "@google-cloud/agones-sdk": "^1.4.0"
   },
   "engines": {
     "node": "11.11.0"
