--- a/agones_files/game_server.yaml
+++ b/agones_files/game_server.yaml
@@ -19,8 +19,7 @@ metadata:
 spec:
   ports:
     - name: default
-      portPolicy: Dynamic
-      #portPolicy: Static
+      portPolicy: Static
       containerPort: 7030
       #hostPort: 7030
       protocol: TCP
