--- a/agones_files/game_server.yaml
+++ b/agones_files/game_server.yaml
@@ -21,7 +21,7 @@ spec:
     - name: default
       portPolicy: Static
       containerPort: 7030
-      #hostPort: 7030
+      hostPort: 7030
       protocol: TCP
   template:
     spec:
