--- a/agones_files/game_server.yaml
+++ b/agones_files/game_server.yaml
@@ -20,9 +20,9 @@ metadata:
 spec:
   ports:
     - name: default
-      portPolicy: Static
+      # portPolicy: Static
       containerPort: 7030
-      hostPort: 7030
+      # hostPort: 7030
       protocol: TCP
   template:
     spec:
