--- a/agones_files/allocation_test.yaml
+++ b/agones_files/allocation_test.yaml
@@ -1,5 +1,7 @@
 apiVersion: "allocation.agones.dev/v1"
 kind: GameServerAllocation
+metadata:
+  name: allocation-test
 spec:
   # GameServer selector from which to choose GameServers from.
   # GameServers still have the hard requirement to be `Ready` to be allocated from
