working server, add yamls

--- a/scripts/setup_post_mm.yaml
+++ b/scripts/setup_post_mm.yaml
@@ -33,6 +33,9 @@ spec:
           value: "80"
         - name: GAME_INSTANCE_MANAGER_SERVICE
           value: "10.15.240.2:80"
+    - name: matchmaker-sidecar
+      image: gcr.io/typespeed-br/matchmaker-sidecar:v0
+      imagePullPolicy: Always
 ---
 apiVersion: v1
 kind: Pod
