--- a/scripts/setup_post_mm.yaml
+++ b/scripts/setup_post_mm.yaml
@@ -36,6 +36,8 @@ spec:
     - name: matchmaker-sidecar
       image: gcr.io/typespeed-br/matchmaker-sidecar:v0
       imagePullPolicy: Always
+      ports:
+          - containerPort: 8081
 ---
 apiVersion: v1
 kind: Pod
