--- a/scripts/setup_post_mm.yaml
+++ b/scripts/setup_post_mm.yaml
@@ -33,11 +33,6 @@ spec:
           value: "80"
         - name: GAME_INSTANCE_MANAGER_SERVICE
           value: "10.15.240.2:80"
-    - name: matchmaker-sidecar
-      image: gcr.io/typespeed-br/matchmaker-sidecar:v0
-      imagePullPolicy: Always
-      ports:
-          - containerPort: 8081
 ---
 apiVersion: v1
 kind: Pod
@@ -55,6 +50,11 @@ spec:
       env:
         - name: SESSION_NAME
           value: "game-instance-manager-server"
+    - name: game-instance-manager-sidecar
+      image: gcr.io/typespeed-br/game-instance-manager-sidecar:v0
+      imagePullPolicy: Always
+      ports:
+          - containerPort: 8081
 ---
 apiVersion: v1
 kind: Service
