Set fleet policy to alwayspull

--- a/agones_files/fleet.yaml
+++ b/agones_files/fleet.yaml
@@ -28,6 +28,7 @@ spec:
           containers:
           - name: server
             image: gcr.io/typespeed-br/game-server:v0
+            imagePullPolicy: Always
             # resources:
             #   requests:
             #     memory: "64Mi"
