--- a/game_instance_manager_sidecar/Dockerfile
+++ b/game_instance_manager_sidecar/Dockerfile
@@ -1,5 +1,6 @@
+# Lightweight unix version
 FROM alpine:3.10.1
-#v1.15.2 is the version that is running your cluster
+# Pull kubernetes so we can run kubernetes proxy
 ADD https://storage.googleapis.com/kubernetes-release/release/v1.14.10/bin/linux/amd64/kubectl /usr/local/bin/kubectl
 RUN chmod +x /usr/local/bin/kubectl
 EXPOSE 8001
